--- a/css/styles.css
+++ b/css/styles.css
@@ -114,12 +114,51 @@ header{
     width: 103%;
 }
 
+/* Harvestability legend */
+#ndmi-legend {
+    position: relative;
+    z-index: 3;
+    /*height: 25px;*/
+    font-size: 14px;
+    /*width: 100%;
+    left: 20px; right: 20px;*/
+    padding-top: 10px;
+    padding-bottom: 20px;
+    margin-bottom: 40px;
+    /* left: -32px; */
+    /* width: 20%; */
+    /* width: 120px; */
+    width: 40%;
+    margin: auto;
+}
+
+.legend { list-style: none; }
+.legend li { float: left; margin-right: 5px; }
+
+/* .legend span { border: 1px solid rgba(0, 0, 0, .8); float: left; width: 120px; height: 24px; margin: 2px; margin-top: 1px;} */
+.legend span {
+    float: left; 
+    /* width: 120px;  */
+    width: 100%; 
+    height: 24px; 
+    margin: 2px; 
+    margin-top: 1px;
+    text-align: center;
+    margin-right: 1000px;
+
+}
+
+.legend .ndmi { background: linear-gradient(to right, rgb(128, 0, 0) 0%, rgb(255, 0, 0) 35%, rgb(255, 255, 0) 48%, rgb(0, 255, 255) 52%, rgb(0, 0, 255) 65%, rgb(0, 0, 128) 100%) }
 
 #set-opacity {
     /* background-color: rgb(240, 240, 240); */
     text-align: center; 
     vertical-align: middle; 
     margin-bottom: 15px;
+    /* display: inline-block; */
+    /* margin: auto; */
+    padding-top: 15px;
+
 }
 
 #opacity, #opacity-slider, #opacity-value {
@@ -229,15 +268,14 @@ header{
 }
 
 
-.legend { list-style: none; }
-.legend li { float: left; margin-right: 5px; }
-.legend span { border: 1px solid rgba(0, 0, 0, .8); float: left; width: 12px; height: 12px; margin: 2px; margin-top: 1px;}
-.legend .frostheave { background-color: rgba(0, 97, 0, .8); }
+
+
+/* .legend .frostheave { background-color: rgba(0, 97, 0, .8); }
 .legend .normalsummermineral { background-color: rgba(97, 153, 0, .8); }
 .legend .drysummermineral { background-color: rgba(160, 219, 0, .8); }
 .legend .normalsummerpeat { background-color: rgba(255, 250, 0, .8); }
 .legend .drysummerpeat { background-color: rgba(255, 132, 0, .8); }
-.legend .winter { background-color: rgba(255, 38, 0, .8); }
+.legend .winter { background-color: rgba(255, 38, 0, .8); } */
 
 #set-date{
     z-index: 3;
