--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,10 @@ header{
     text-align: center;
 } */
 
+#timeseries-control {
+    padding-bottom: 10px;
+}
+
 #labels_cems, #labels_duff, #labels_firebuildup, #labels_fireweather, #labels_fuelmoisture, #labels_firespread, #labels_fireseverity {      
     position:relative;
     font-size: 10px;
@@ -73,7 +77,7 @@ header{
     margin-left: 60px;*/
     margin-right: auto;
     margin-left: auto;
-    text-align: center;
+    /* text-align: center; */
 }
 
 /* #labels_cems, #labels_duff, #labels_firebuildup, #labels_fireweather, #labels_fuelmoisture, #labels_firespread, #labels_fireseverity {
@@ -101,40 +105,9 @@ header{
     vertical-align: middle;
 }
 
-/* Harvestability legend */
-#harvestability-legend {
-    position: relative;
-    z-index: 3;
-    /*height: 25px;*/
-    font-size: 14px;
-    /*width: 100%;
-    left: 20px; right: 20px;
-    margin-top: 20px;*/
-    margin-bottom: 40px;
-    left: -32px;
-    width: 103%;
+.timeseries-table td {
+    padding-right: 10px;
 }
-
-/* Harvestability legend */
-#ndmi-legend {
-    position: relative;
-    z-index: 3;
-    /*height: 25px;*/
-    font-size: 14px;
-    /*width: 100%;
-    left: 20px; right: 20px;*/
-    padding-top: 10px;
-    padding-bottom: 20px;
-    margin-bottom: 40px;
-    /* left: -32px; */
-    /* width: 20%; */
-    /* width: 120px; */
-    width: 40%;
-    margin: auto;
-}
-
-.legend { list-style: none; }
-.legend li { float: left; margin-right: 5px; }
 
 /* .legend span { border: 1px solid rgba(0, 0, 0, .8); float: left; width: 120px; height: 24px; margin: 2px; margin-top: 1px;} */
 
